vlib/v/checker/tests/match_range_mismatch_type_err.out
vlib/v/checker/tests/match_range_mismatch_type_err.vv:4:3: error: mismatched range types - trying to match `x`, which has type `string`, against a range of `rune`
    2 |     x := '1'
    3 |     match x {
    4 |         `0`...`9` {
      |         ~~~
    5 |             println('0-9')
    6 |         }
vlib/v/checker/tests/match_range_mismatch_type_err.vv:16:3: error: mismatched range types - 0 is an integer, but `9` is not
   14 |     x := 1
   15 |     match x {
   16 |         0...`9` {}
      |         ^
   17 |         else {}
   18 |     }
